# rds-schema-exporter

./: .gitignore  CLAUDE.md  config.example.yaml  pyproject.toml  run.py
.claude/: settings.json
src/rds_schema_exporter/: __main__.py  app.py  cli.py  config.py  metadata.py  models.py  runner.py  teleport.py  web_runner.py
src/rds_schema_exporter/extraction/: __init__.py  databases.py  events.py  functions.py  indexes.py  procedures.py  tables.py  triggers.py  views.py
src/rds_schema_exporter/notifications/: slack.py
src/rds_schema_exporter/reporting/: summary.py
src/rds_schema_exporter/writers/: __init__.py  base.py  local.py  s3.py
static/: style.css
templates/: base.html  index.html
templates/partials/: login_status.html  summary.html
tests/: conftest.py  test_config.py  test_extraction.py  test_metadata.py  test_notifications.py  test_runner.py  test_teleport.py  test_writers.py
